# Alien-Autotools

./: .gitignore  .travis.yml  Build.PL  Changes  README.md  author.yml  dist.ini
.github/workflows/: linux.yml  windows.yml
corpus/foo/: README  configure.ac
corpus/foo/scripts/: Makefile.am  foo
lib/Alien/: Autotools.pm  Autotools.pod
maint/: travis-install-alienbuild
t/: 00_diag.t  01-bins_exist.t  alien_autotools.t  alien_autotools__from_alienfile.t  alien_autotools__legacy.t
