#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([foo], [4.2], [devnull@wdlabs.com])
AM_INIT_AUTOMAKE
AC_OUTPUT(Makefile scripts/Makefile)

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
